Add new project hungbeo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title> MAIN INDEX </title>
+	<title> dành cho bé iu ngu toán </title>
 	<!-- style sheet -->
 	<link href="css/main.css" rel="stylesheet">
 	<!-- Tab icon -->
@@ -21,7 +21,7 @@
 			<img id="rightwing" src="img/rightwing.png" alt="wing">
 			<img id= "leftwing" src="img/leftwing.png" alt="wing">
 			<span id= "letter">
-				<a href="loading.html"><img id ="heart" src="img/heart.png" alt="heart"></a>
+				<a href="hangcho.html"><img id ="heart" src="img/heart.png" alt="heart"></a>
 				<img id="envelope" src="img/envelop.png" alt="letter">
 
 			</span>
