--- a/hangcho.html
+++ b/hangcho.html
@@ -19,15 +19,15 @@
 	
 <body>
 	<main>
-		<a id ="git" href="git.html">
+		<a id ="git" href="bucthut1.html">
 		<img id="git_photo" src="img/git.png" rel="thumbnail git" alt="git">
 	</a>
 
-	<a id="bash" href="bash.html"> 
+	<a id="bash" href="bucthut2.html"> 
 		<img id="bash_photo" src="img/bash.png" rel="thumbnail bash" alt="bash"> 
 	</a>
 	
-	<a id= "github" href="github.html"> 
+	<a id= "github" href="bucthut3.html"> 
 		<img id="github_photo" src="img/github.png" rel="thumbnail gitHub" alt="github">
 	</a>
 	</main>
