Add new project hungbeo

--- a/bucthut1.html
+++ b/bucthut1.html
@@ -23,12 +23,11 @@
           <span id = "dear">Gửi Huyền Anh cute xinh đẹp và giỏi vãi cả ...,</span>
    
 			<span id = "message">
-				Chào buổi sáng cô gái bé nhỏ của anh, thực ra cũng có hơi nhận vơ 1 chútt, nhưng mà chắc không sao đâu nhỉ ^^  đây là bức thư đầu tiên mà anh dành cho em. Nên là hãy bắt đầu ngày mới của mình bằng một nụ cười thật tươi và nhớ ăn sáng đầy đủ đó nha :3 Hy vọng ngày hôm nay, hay cũng như bao ngày khác đều thật đẹp với em. 
-				Nhưng mà nói sao thì nói, bữa nay em lặn anh đi hơi nhiều đó, tôi tưởng tôi  bị gốt, toàn đi ngủ trước mà không thèm chúc anh gì như trước nữa rồi. anh tức mà không nói đâu đó. cứ ỉm ỉm ông cốc đầu cho phát giờ, rất là bực mình. Đừng quên là em còn nợ anh 1 bức ảnh mà anh yêu cầu đó nha, anh vẫn chưa nhận đc mặc dù đã chục ngày rồi đó biết chưa.
-				Gắt gỏng thế là hơi nhiều rồi, nói mãi vẫn không có nghe, em bé đừng làm việc quá sức, thấy đuối thì nghỉ chút chứ đừng có cố quá đó, học suốt thấy thương quá trời đất ơi, dù thi có khó khăn đến mấy nhưng anh tin em sẽ làm được mà, cố lên nha. cuối tuần khảo sát gáng thi tốt để tôi lại mở kèo tiếp với em nào =)))))
+				Chào buổi sáng cô gái bé nhỏ của anh, thực ra cũng có hơi nhận vơ 1 chútt, nhưng mà chắc không sao đâu nhỉ ^^  đây là bức thư đầu tiên mà anh dành cho em. Nên là hãy bắt đầu ngày mới của mình bằng một nụ cười thật tươi đó nha :3 Hy vọng ngày hôm nay, hay cũng như bao ngày khác đều thật đẹp với em. 
+				Nhưng mà nói sao thì nói, bữa nay em lặn anh đi hơi nhiều đó, tôi tưởng tôi bị gốt, toàn đi ngủ trước mà không thèm chúc anh gì như trước nữa rồi. anh tức mà không nói đâu đó. cứ ỉm ỉm ông cốc đầu cho phát giờ, rất là bực mình. Đừng quên là em còn nợ anh 1 bức ảnh mà anh yêu cầu đó nha, anh vẫn chưa nhận đc mặc dù đã chục ngày rồi đó biết chưa.
+				Gắt gỏng thế là hơi nhiều rồi, nói mãi vẫn hem có nghe, em bé đừng làm việc quá sức, thấy đuối thì nghỉ chút chứ đừng có cố quá đó, học suốt thấy thương quá trời đất ơi. cuối tuần khảo sát thoải mái thi tốt để tôi lại mở kèo tiếp với em nào =))))) dù thi có khó khăn đến mấy nhưng anh tin em sẽ làm được mà, cố lên nha.
 				<br>
 				Anh không biết đã có ai từng nói với em điều này chưa, nhưng em tuỵt vời lắm đó.
-				
 			<br>
 			Iu iu,
           	<br>Hùng
